# Raylib-CPP-Template

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: main.cpp
src/Game/: Game.cpp  Game.h  GameContext.h
src/Managers/AssetManager/: AssetManager.cpp  AssetManager.h
src/Managers/AudioManager/: AudioManager.h
src/Managers/GestureHandler/: GestureHandler.h
src/Managers/SceneManager/: Scene.h  SceneManager.cpp  SceneManager.h
src/Managers/StorageManager/: StorageManager.h
src/Scenes/GameScene/: GameScene.cpp  GameScene.h
src/Scenes/Splash/: Splash.cpp  Splash.h
